@@ -1,3 +1,8 @@
+2016-09-28  Martin Sebor  <msebor@redhat.com>
+
+	PR middle-end/77721
+	* gcc.dg/tree-ssa/builtin-sprintf-warn-6.c: New test.
+
 2016-09-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/77707
